monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4005/A4005.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4005;

grammar A4005 {
  A;

  B = ((C:A)*)?;

}
